# genanki-rs

./: Cargo.toml
src/: builtin_models.rs  db_entries.rs  deck.rs  lib.rs  model.rs  note.rs  package.rs
