[package]
name = "genanki-rs"
version = "0.3.0"
authors = ["Yannick Funk <yannickfunk@yahoo.de>"]
edition = "2018"
description = "Crate to create decks for the open source flashcard platform Anki. Based on Python library genanki"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yannickfunk/genanki-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
tempfile = "3.2.0"
zip = "0.6.3"
serde_json = "1.0.64"
fancy-regex = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
ramhorns = "0.10.2" #error
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.62"
pyo3 = { version = "0.16.3", features = ["auto-initialize", "multiple-pymethods"] }
serial_test = "0.9.0"
uuid = { version = "1.2", features = ["v4"] }
